cpp/test/FreezeScript/dbmap/fail/07_old.ice
module Test
{

enum E { E1, E2, E3 };

struct S1
{
    float m1;
    long m2;
    string m3;
    E m4;
};

sequence<double> Seq1;
dictionary<byte, double> D1;

interface I {};

class C1 implements I
{
    double c1m1;
    double c1m2;
    double c1m3;
    double c1m4;
    double c1m5;
    double c1m6;
    double c1m7;
    double c1m8;
    double c1m9;
    double c1m10;
    double c1m11;
    double c1m12;
    double c1m13;
    double c1m14;
    double c1m15;
    double c1m16;
};

class C2 extends C1
{
    double c2m1;
    double c2m2;
    double c2m3;
    double c2m4;
    double c2m5;
    double c2m6;
    double c2m7;
    double c2m8;
    double c2m9;
    double c2m10;
    double c2m11;
    double c2m12;
    double c2m13;
    double c2m14;
    double c2m15;
    double c2m16;
};

struct S2
{
    double m1;
    double m2;
    double m3;
    double m4;
    double m5;
    double m6;
    double m7;
    double m8;
    double m9;
    double m10;
    double m11;
    double m12;
    double m13;
    double m14;
    double m15;
    double m16;
};

};
